fixed nav bar overflow issue

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -5,23 +5,14 @@
   border-top-right-radius: 10px;
 
   margin-top: 5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .footer-content {
   display: flex;
   justify-content: space-between;
 }
-
-/* .footer h3 {
-  color: #333;
-  font-size: 18px;
-  margin-bottom: 10px;
-} */
-
-/* .footer p {
-  color: #777;
-  font-size: 14px;
-} */
 
 .footer-bottom {
   text-align: center;
