--- a/CSS/nav_bar.css
+++ b/CSS/nav_bar.css
@@ -1,6 +1,6 @@
 #nav-bar {
   width: 100%;
-  height: 10vh;
+  height: 12%;
 
   /* make nav bar touch the very top of page */
   top: 0;
@@ -19,6 +19,8 @@
 
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   z-index: 999;
+  
+  /* overflow: hidden; */
 }
 
 /* .nav-logo img {
